# OK-PROJEKT-CWRTW

./: .gitmodules  CMakeLists.txt  README.md
CVRPTW_lib/: CMakeLists.txt  Cvrptw.cpp  Cvrptw.h  Truck.cpp  Truck.h  Trucks.cpp  Trucks.h
Google_tests/: CMakeLists.txt  CvrptwTest.cpp  NodeTest.cpp  NodesTest.cpp
Node_lib/: CMakeLists.txt  Node.cpp  Node.h  Nodes.cpp  Nodes.h
